# k8s-probes-tester

./: .gitignore  Cargo.toml  K3S.md  Kubernetes.md  Minikube.md  README.md  flake.nix  microk8s.md
deploy/kubernetes/: configmap.yml  deploy.yml  ingress.yml  pdb.yml  pod.yml  pod_configmap_secret.yml  probes.yml  secret.yml  service.yml
src/: main.rs
src/health/: alive.rs  mod.rs  ready.rs  service.rs
